fabrique-derive/tests/ui/persistable/fail/derive_persistable_on_unit_struct.rs
use fabrique_derive::Persistable;

#[derive(Persistable)]
struct Anvil;

fn main() {}
